# agentspy

./: .gitignore  CLAUDE.md  PLAN.md  README-it.md  README.md  agentspy_proxy.py  install.ps1  install.sh  justfile
.github/workflows/: ci.yml  claude.yml
.okf/: architecture.md  index.md  log.md
.okf/components/: collector-server.md  frontend.md  hook-script.md  index.md  mcp-wrapper.md  opencode-plugin.md  seed-demo.md  standalone-proxy.md
.okf/design/: adapter-layers.md  correlation.md  decisions.md  index.md  run-tagging.md  skill-recognition.md  token-accounting.md
.okf/interfaces/: index.md  ingest-api.md  jsonl-log-format.md  rest-api.md  sqlite-schema.md  websocket.md
.okf/runbooks/: agent-provider-matrix.md  development.md  index.md  quickstart.md
frontend/: package-lock.json  package.json  vite.config.screenshot.ts  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts  types.ts
hooks/: README.md  agentspy_hook.py  settings-example.json
hooks/opencode/: README.md  (+1 more)
mcp/: agentspy_mcp_wrapper.py
scripts/: backfill_prompt_usage.py  seed_demo.py
server/: pyproject.toml
server/agentspy_server/: __init__.py  api.py  app.py  context_artifacts.py  correlate.py  ingest.py  proxy.py  store.py  ws.py
server/agentspy_server/providers/: __init__.py  anthropic.py  base.py
server/agentspy_server/runtimes/: __init__.py  base.py  claude_code.py  claude_code_artifacts.py  opencode.py  opencode_artifacts.py
server/tests/: test_api.py  test_context_artifacts.py  test_correlate.py  test_proxy.py  test_runtime_opencode.py  test_store.py
(+54 files in other folders)
