[project]
name = "agentspy-server"
version = "0.1.0"
description = "agentspy collector core: proxy trasparente, storage SQLite, correlazione sessioni, API REST/WS"
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.37",
    "uvicorn>=0.30",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
agentspy = "agentspy_server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentspy_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
